fix markdown typos